Image width Fixed

--- a/FP.html
+++ b/FP.html
@@ -48,7 +48,7 @@
             <div class="main-img">
                     <!-- <img src="" alt="" srcset=""> -->
                     <figure>
-                        <img src="./FP_images/medium/painting1.jpg" id="myImage" height="500px" alt="" srcset="">
+                        <img src="./FP_images/medium/painting1.jpg" id="myImage" height="500px" width="350px" alt="" srcset="">
                         <figcaption id="figCap">First Paint</figcaption>
                     </figure>
 
