--- a/FP.html
+++ b/FP.html
@@ -20,7 +20,7 @@
             <!-- Filter Section goes here -->
             <div class="filters">
 
-                <form action="">
+                <form id="myForm" action="">
                 <label for="opecity">Opecity</label> <br>
                 <input type="range" class="slider" id="opecity" name="opecity"  aria-valuemin="0" aria-valuemax="100" value="100" > <span id="perOpecity">100%</span>
                 <br><br>
